--- a/app/api/package.json
+++ b/app/api/package.json
@@ -1,9 +1,8 @@
 {
-  "dependencies": {
-    "@prisma/client": "^6.5.0",
-    "express": "^4.21.2"
-  },
   "devDependencies": {
     "prisma": "^6.5.0"
+  },
+  "dependencies": {
+    "@prisma/client": "^6.5.0"
   }
 }
