--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,70 @@
-Faker==37.0.0
-faker_education==1.2.1
-Flask==3.1.0
-flask_cors==5.0.1
-numpy==2.2.3
-pandas==2.2.3
-psycopg2==2.9.10
-rich==13.9.4
-sv_ttk==2.6.0
-tkcalendar==1.6.1
+adbc_driver_manager==1.5.0
+adbc_driver_postgresql==1.5.0
+adbc_driver_sqlite==1.5.0
+AppKit==0.2.8
+asgiref==3.8.1
+attr==0.3.2
+beautifulsoup4==4.13.3
+boto3==1.37.12
+botocore==1.37.12
+brotli==1.1.0
+charset_normalizer==3.4.1
+ConfigParser==7.2.0
+cryptography==3.4.8
+cycler==0.12.1
+Cython==3.0.12
+dask==2025.2.0
+dl==0.1.0
+docutils==0.21.2
+fastparquet==2024.11.0
+Foundation==0.1.0a0.dev1
+fsspec==2025.3.0
+HTMLParser==0.0.2
+hypothesis==6.129.1
+importlib_metadata==4.6.4
+ipython==8.12.3
+ipywidgets==8.1.5
+jnius==1.1.0
+keyring==23.5.0
+lockfile==0.12.2
+lxml==5.3.1
+matplotlib==3.10.1
+mtrand==0.1
+mypy==1.15.0
+numarray==1.5.1
+Numeric==24.2
+numexpr==2.10.2
+odfpy==1.4.1
+openpyxl==3.1.5
+ordereddict==1.1
+pickle5==0.0.12
+Pillow==11.1.0
+protobuf==6.30.1
+psutil==7.0.0
+PyInstaller==6.12.0
+pyOpenSSL==25.0.0
+PyQt4==4.11.4
+PyQt5==5.15.11
+PyQt5_sip==12.15.0
+python_calamine==0.3.1
+pyxlsb==1.0.10
+qtpy==2.4.3
+railroad==0.5.0
+s3fs==2025.3.0
+scikit_learn==1.6.1
+scipy==1.15.2
+scipy_doctest==1.6
+sets==0.3.2
+SQLAlchemy==2.0.36
+thread==2.0.5
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.4.2
+traitlets==5.14.3
+watchdog==6.0.0
+xarray==2025.1.2
+xlrd==2.0.1
+xlsxwriter==3.2.2
+xmlrpclib==1.0.1
+xmltodict==0.14.2
+zipp==1.0.0
