--- a/app/api/package.json
+++ b/app/api/package.json
@@ -1,8 +1,15 @@
 {
+  "type": "module",
   "devDependencies": {
-    "prisma": "^6.5.0"
+    "jest": "^29.7.0",
+    "prisma": "^6.5.0",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.5.0"
+    "@prisma/client": "^6.5.0",
+    "express": "^4.21.2"
+  },
+  "scripts": {
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   }
 }
